--- a/webclient/public/inc/yast.css
+++ b/webclient/public/inc/yast.css
@@ -312,7 +312,7 @@ textarea, input[type=text] {
   -moz-border-radius: 8px; -webkit-border-radius: 8px;
   margin: 3px; padding: 2em;
   min-height: 1em; 
-  display: none;
+/*  display: none; */
 }
 
   #notifications .button {
