--- a/plugins/patch_updates/app/views/patch_updates/index.html.erb
+++ b/plugins/patch_updates/app/views/patch_updates/index.html.erb
@@ -1,50 +1,21 @@
-<div class="patches-list">
-  <label for="#patches-list"><%=_("Available patches")%></label>
-
-   <table class="list" cellpadding="0" cellspacing="0">
-      <tr>
-	<th class="first" width=8%><%=_("Kind")%></th>
-	<th width=15%><%=_("Name")%></th>
-	<th width="100"><%=_("Summary")%></th>
-        <% if @install_permission == nil %>
-           <th width=15%><%=_("Source")%></th>
-           <th class="last" width=5%><%=_("Install")%></th>
-        <% else %>
-           <th class="last" width=15%><%=_("Source")%></th>
-        <% end %>
-      </tr>
-      <% counter=0 %>
-      <% for patch_update in @patch_updates %>
-            <% if counter==0 %>
-             <tr>
-             <% counter += 1 %>
-            <% else %>
-             <tr class="bg">
-             <% counter = 0 %>
-            <% end %>
-              <%
-                 # this should go to a helper?
-                 kinds = { "security" => '/icons/kupdateapplet_red.png',
-                           "important" => '/icons/kupdateapplet_yellow.png',
-                           "green" => '/icons/kupdateapplet_green.png',
-                           "optional" => '/icons/kupdateapplet_optional.png' }
-              %>
-              <% if kinds.has_key?(patch_update.kind) %>
-                  <td class="icon"><%= image_tag(kinds[patch_update.kind]) %></td>
-              <% else %>
-                  <td><%=h patch_update.kind %></td>
-              <% end %>
-
-              <td class="label"><%=h patch_update.name %></td>
-              <td class="label"><%=h patch_update.summary %></td>
-              <td><%=h patch_update.repo %></td>
-              <% if @install_permission.nil? %>
-                 <td><%= link_to image_tag("/images/add-icon.gif", :alt =>  "install"), 
-                         patch_update_path(patch_update.resolvable_id), :onclick=>"Element.show('progress')", :method => :post, :action => "install" %></td>
-              <% end %>
-           </tr>
-      <% end %>
-   </table>
+<label for="#patches-list"><%=_("Available patches")%></label>
+<div class="loading">
 </div>
+
+<div id="patch-list" class="patches-list loading">
+</div>
+
+<div id="check-updates-button" class="button">Check for updates</div>
+
+<% javascript_tag do -%>
+$(document).ready( function() {
+  $('#progress').show();
+  $('#patch-list').load('/patch_updates/list', null, function() { $('#progress').hide() } );
+  $('div#check-updates-button').click(
+    function() { $('#patch-list').load('/patch_updates/list') }
+  );
+});
+//$('div#check-updates-button').hide();
+<% end -%>
 
 <a href="/" class="button"><%=_("Back")%></a>
