use new jquery ui

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -4,15 +4,24 @@
 <head xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <link rel="stylesheet" href="/inc/yast.css" type="text/css" media="screen" title="default" charset="utf-8" />
+
+<link rel="stylesheet" href="/inc/smoothness/jquery.ui.custom.css" type="text/css" media="screen" title="default" charset="utf-8" />
+<!--
   <link rel="stylesheet" href="/inc/jqModal.css" type="text/css" media="screen" title="default" charset="utf-8" />
 <link rel="stylesheet" href="/inc/ui.tabs.css" type="text/css" media="screen" title="default" charset="utf-8" />
+-->
+
   <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.js"></script>
   <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.query.js"></script>  
   <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.timers.js"></script>
 
-  <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.jqModal.js"></script>
-  <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.ui.core.js"></script>
-  <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.ui.tabs.js"></script>
+  <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.ui.custom.js"></script>
+
+  <!--<script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.jqModal.js"></script>
+<script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.ui.core.js"></script>
+  <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.ui.tabs.js"></script>-->
+
+
   <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/shortcut.js"></script>  
   <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/yast.widgets.js"></script>
   <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/yast.helpers.js"></script>  
