--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -1,41 +1,38 @@
 <h1><%=_("Local User")%></h1>
 <br>
 
-<div class="table">
-   <img src="images/bg-th-left.gif" width="8" height="7" alt="" class="left" />
-   <img src="images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
-   <table class="listing" cellpadding="0" cellspacing="0">
-      <tr>
-	<th class="first" width=150><%=_("Login")%></th>
-	<th width=8%><%=_("Edit")%></th>
-        <% if @delete_permission == nil %>
-           <th width=8%><%=_("SSH-Key")%></th>
-           <th class="last" width=8%><%=_("Delete")%></th>
-        <% else %>
-           <th class="last" width=8%><%=_("SSH-Key")%></th>
-        <% end %>
-      </tr>
-      <% for user in @users %>
-         <% if user.error_id != 0 %>
-           <tr>
-              <td>Error ID: <%= user.error_id -%> Error: <%= user.error_string -%></td>
-           </tr>
-         <% else %>
-           <tr>
-              <td><strong><%=h user.login_name %></strong></td>
-              <td><%= link_to image_tag("/images/edit-icon.gif", :alt =>  "edit"), edit_user_path(user.login_name), :onclick=>"Element.show('progress')" %></td>
-              <td><%= link_to image_tag("/images/key_add.png", :alt =>  "key"), exportssh_user_path(user.login_name), :onclick=>"Element.show('progress')" %></td>
-              <% if @delete_permission == nil %>
-                 <td class="last"><%= link_to image_tag("/images/delete.png", :alt =>  "delete"), 
-                              user_path(user.login_name), :confirm => _('Are you sure?'), :method => :delete %></td>
-              <% end %>
-           </tr>
-         <% end %>
-      <% end %>
-   </table>
-   <% if @new_permission == nil %>
-      <div class="select">
-          <%= link_to _("<strong>[New User]</strong>"), new_user_path, :onclick=>"Element.show('progress')" -%><p/>
-      </div>
-   <% end %>
+<table class="list">
+  <tr>
+    <th class="first" width=150><%=_("Login")%></th>
+    <th width=8%><%=_("Edit")%></th>
+    <% if @delete_permission == nil %>
+    <th width=8%><%=_("SSH-Key")%></th>
+    <th class="last" width=8%><%=_("Delete")%></th>
+    <% else %>
+    <th class="last" width=8%><%=_("SSH-Key")%></th>
+    <% end %>
+  </tr>
+  <% for user in @users %>
+  <% if user.error_id != 0 %>
+  <tr>
+    <td>Error ID: <%= user.error_id -%> Error: <%= user.error_string -%></td>
+  </tr>
+  <% else %>
+  <tr>
+    <td><strong><%=h user.login_name %></strong></td>
+    <td><%= link_to image_tag("/images/edit-icon.gif", :alt =>  "edit"), edit_user_path(user.login_name), :onclick=>"Element.show('progress')" %></td>
+    <td><%= link_to image_tag("/images/key_add.png", :alt =>  "key"), exportssh_user_path(user.login_name), :onclick=>"Element.show('progress')" %></td>
+    <% if @delete_permission == nil %>
+    <td class="last"><%= link_to image_tag("/images/delete.png", :alt =>  "delete"), 
+      user_path(user.login_name), :confirm => _('Are you sure?'), :method => :delete %></td>
+    <% end %>
+  </tr>
+  <% end %>
+  <% end %>
+</table>
+
+<% if @permissions[:write] %>
+<div class="select">
+  <%= link_to _("<strong>[New User]</strong>"), new_user_path, :onclick=>"Element.show('progress')" -%><p/>
 </div>
+<% end %>
