--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -1,48 +1,49 @@
 <h1><%=_("Edit User")%></h1>
 <br>
+
+<% disabled = ! @permissions[:write] %>
+
 <% form_for(:user, @user) do |f| %>
   <%= f.error_messages %>
 
   <div class="table">
-    <img src="/images/bg-th-left.gif" width="8" height="7" alt="" class="left" />
-    <img src="/images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
-    <table class="listing form" cellpadding="0" cellspacing="0">
+    <table class="list" cellpadding="0" cellspacing="0">
     <tr>
  	<th class="full" colspan="2"><%=_("User")%></th>
     </tr>
     <tr>
 	<td class="first" width="120"><strong><%=_("Full Name")%></strong></td>
-	<td class="last"><%= f.text_field :full_name, :disabled=>@write_permission %></td>
+	<td class="last"><%= f.text_field :full_name, :disabled => disabled %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong><%=_("Groups")%></strong></td>
-	<td class="last"><%= f.text_field :grp_string, :disabled=>@write_permission %></td>
+	<td class="last"><%= f.text_field :grp_string, :disabled => disabled %></td>
     </tr>
     <tr>
 	<td class="first"><strong><%=_("Default Group")%></strong></td>
-	<td class="last"><%= f.text_field :default_group, :disabled=>@write_permission %></td>
+	<td class="last"><%= f.text_field :default_group, :disabled => disabled %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong><%=_("Home Directory")%></strong></td>
-	<td class="last"><%= f.text_field :home_directory, :disabled=>@write_permission %></td>
+	<td class="last"><%= f.text_field :home_directory, :disabled => disabled %></td>
     </tr>
     <tr>
 	<td class="first"><strong><%=_("Login Shell")%></strong></td>
-	<td class="last"><%= f.text_field :login_shell, :disabled=>@write_permission %></td>
+	<td class="last"><%= f.text_field :login_shell, :disabled => disabled %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong><%=_("Login Name")%></strong></td>
-	<td class="last"><%= f.text_field :login_name, :disabled=>@write_permission %></td>
+	<td class="last"><%= f.text_field :login_name, :disabled => disabled %></td>
     </tr>
     <tr>
 	<td class="first"><strong><%=_("UID")%></strong></td>
-	<td class="last"><%= f.text_field :uid, :disabled=>@write_permission %></td>
+	<td class="last"><%= f.text_field :uid, :disabled => disabled %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong><%=_("Password")%></strong></td>
-	<td class="last"><%= f.text_field :password, :disabled=>@write_permission %></td>
+	<td class="last"><%= f.text_field :password, :disabled => disabled %></td>
     </tr>
     </table>
-    <p><%= f.submit _("Update"), :disabled=>@write_permission, :onclick=>"Element.show('progress')" %><%= link_to _('Back'), users_path, :onclick=>"Element.show('progress')", :class => "button"%></p>
+    <p><%= f.submit _("Update"), :disabled => disabled %><%= link_to _('Back'), users_path, :onclick=>"Element.show('progress')", :class => "button"%></p>
   </div>
 <% end %>
