--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -1,12 +1,10 @@
 <h1><%=_("New User")%></h1>
-<br>
+
 <% form_for :user, :url => { :action => "create"}  do |f| %>
   <%= f.error_messages %>
 
   <div class="table">
-    <img src="/images/bg-th-left.gif" width="8" height="7" alt="" class="left" />
-    <img src="/images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
-    <table class="listing form" cellpadding="0" cellspacing="0">
+    <table class="list">
     <tr>
  	<th class="full" colspan="2">User</th>
     </tr>
