--- a/plugins/users/app/views/users/exportssh.html.erb
+++ b/plugins/users/app/views/users/exportssh.html.erb
@@ -1,5 +1,5 @@
 <h1><%=_("Export SSH-Key")%></h1>
-<% form_for(:user, @user) do |f| %>
+<% form_for(:user, @user, :url => { :action => "update" }, :html => { :method => :put }) do |f| %>
   <%= f.error_messages %>
 
   <div class="table">
