security module: changed names in view

--- a/plugins/securities/app/views/securities/update.erb
+++ b/plugins/securities/app/views/securities/update.erb
@@ -10,12 +10,12 @@
 
   <label>
     <input type="checkbox" name="firewall" value="true" <%= @firewall %> @write_permission />
-    <span><%=_("Current Firewall Status")%></span>
+    <span><%=_("Firewall enabled")%></span>
   </label>
 
  <label>
     <input type="checkbox" name="ssh" value="true" <%= @ssh %> @write_permission />
-    <span><%=_("Current SSH Status")%></span>
+    <span><%=_("SSH login enabled")%></span>
   </label>
 
   <span>
