--- a/plugins/securities/app/views/securities/create.erb
+++ b/plugins/securities/app/views/securities/create.erb
@@ -2,7 +2,6 @@
 
 <% form_tag '/security/update' do %>
 <span>
-
   <label>
     <input type="checkbox" name="firewall_after_startup" value="true" <%= @firewall_after_startup %> @write_permission />
     <span><%=_("Enable Firewall Automatic Starting")%></span>
@@ -10,12 +9,12 @@
 
   <label>
     <input type="checkbox" name="firewall" value="true" <%= @firewall %> @write_permission />
-    <span><%=_("Current Firewall Status")%></span>
+    <span><%=_("Firewall enabled")%></span>
   </label>
 
  <label>
     <input type="checkbox" name="ssh" value="true" <%= @ssh %> @write_permission />
-    <span><%=_("Current SSH Status")%></span>
+    <span><%=_("SSH login enabled")%></span>
   </label>
 
   <span>
