--- a/plugins/samba_server/app/views/samba_server/index.html.erb
+++ b/plugins/samba_server/app/views/samba_server/index.html.erb
@@ -1,17 +1,3 @@
 <h1><%=_("Exported Samba Shares")%></h1>
 
-<table class="list">
-
-  <tr>
-    <th class="first" width=150><%=_("Share Name")%></th>
-  </tr>
-
-  <% @shares.each do |share| %>
-    <tr><td><%= share.name %><td></tr>
-  <% end %>
-</table>
-
-<br>
-
-  <%= button_to _("Add a new share"), {:action => "new"} , :disabled => !@permissions[:addshare] %>
-
+<%= simple_table([_("Samba Share")], @shares, [:name], {:add => @permissions[:addshare], :edit => @permissions[:editshare], :delete => @permissions[:deleteshare], :id => :name})%>
