view helpers separated to extra files
the view helpers from application_helper.rb have been
split to separte files under view_helpers subdirectory

--- a/plugins/samba_server/app/views/samba_server/index.html.erb
+++ b/plugins/samba_server/app/views/samba_server/index.html.erb
@@ -1,3 +1,5 @@
 <h1><%=_("Exported Samba Shares")%></h1>
 
+<% require 'view_helpers/html' %>
+
 <%= HTML.simple_table([_("Samba Shares")], @shares, [:name], {:add => @permissions[:addshare], :edit => @permissions[:editshare], :delete => @permissions[:deleteshare], :id => :name})%>
