--- a/plugins/systemtime/app/views/system_time/index.rhtml
+++ b/plugins/systemtime/app/views/system_time/index.rhtml
@@ -12,7 +12,7 @@
 <% form_tag '/system_time/commit_time', :class => 'container' do %>
 <span>
   <label>
-    <span><%=_("Timezone:")%></span> 
+    <span><%=_("Timezone:")%></span>
     <%= select_tag "timezone", options_for_select(@valid, @systemtime.timezone), :disabled=> disabled %>
   </label>
 
@@ -29,7 +29,7 @@
 
   <label>
     <span><%= _("Time") %></span>
-    <%= text_field_tag "currenttime", @time_string, :disabled=> disabled %>
+    <%= text_field_tag "currenttime", @systemtime.currenttime, :disabled=> disabled %>
   </label>
 
   <span>
