--- a/plugins/samba_server/app/views/samba_server/index.html.erb
+++ b/plugins/samba_server/app/views/samba_server/index.html.erb
@@ -1,5 +1,3 @@
 <h1><%=_("Exported Samba Shares")%></h1>
 
-<% require 'view_helpers/html' %>
-
-<%= HTML.simple_table([_("Samba Shares")], @shares, [:name], {:add => @permissions[:addshare], :edit => @permissions[:editshare], :delete => @permissions[:deleteshare], :id => :name})%>
+<%= html_simple_table([_("Samba Shares")], @shares, [:name], {:add => @permissions[:addshare], :edit => @permissions[:editshare], :delete => @permissions[:deleteshare], :id => :name})%>
