security module: some code review

--- a/plugins/securities/app/views/securities/update.erb
+++ b/plugins/securities/app/views/securities/update.erb
@@ -4,7 +4,7 @@
 <span>
 
   <label>
-    <input type="checkbox" name="firewall_after_startup" value="true" <%= @firewall_after_startup %> @write_permission />
+    <input type="checkbox" name="firewall_on_startup" value="true" <%= @firewall_on_startup %> @write_permission />
     <span><%=_("Enable Firewall Automatic Starting")%></span>
   </label>
 
