--- a/plugins/samba_server/app/views/samba_server/new.html.erb
+++ b/plugins/samba_server/app/views/samba_server/new.html.erb
@@ -10,11 +10,15 @@
     </tr>
     <tr>
 	<td class="first" width="120"><strong><%=_("Share Name")%></strong></td>
-	<td class="last"><%= f.text_field :name %></td>
+	<td class="last"><%= f.text_field :id %></td>
     </tr>
     <tr>
 	<td class="first"><strong><%=_("Read only access")%></strong></td>
 	<td class="last"><input type="checkbox" name="read_only" value="<%= isSMBtrue?(@share.attributes["ReadOnly"]) -%>" ></td>
+    </tr>
+    <tr>
+	<td class="first"><strong><%=_("Path to the Share")%></strong></td>
+	<td class="last"><input type="text" name="share[path]" value="<%= @share.attributes["Path"] -%>" ></td>
     </tr>
     </table>
     <p><%= f.submit _("Create"), :onclick=>"Element.show('progress')" %><%= link_to _('Back'), users_path, :onclick=>"Element.show('progress')", :class => "button" %></p>
