samba-server - use text_field helper in edit view

--- a/plugins/samba_server/app/views/samba_server/edit.html.erb
+++ b/plugins/samba_server/app/views/samba_server/edit.html.erb
@@ -19,7 +19,7 @@
     <% @share.parameters.each do |p| %>
     <tr>
 	<td class="first" width="120"><strong><%= h p.name%></strong></td>
-	<td class="last"> <input type="text" id="parameters[<%= h p.name -%>]" name="parameters[<%= h p.name -%>]" value="<%= p.value -%>"/> </td>
+	<td class="last"><%= f.text_field p.name, :disabled => disabled %></td>
     </tr>
     <% end %>
 
