--- a/plugins/language/app/views/language/index.rhtml
+++ b/plugins/language/app/views/language/index.rhtml
@@ -1,30 +1,24 @@
-<h2><%=_("Language")%></h1>
+<h1><%=_("Language")%></h1>
 <br>
 
-<% form_tag '/language/commit_language' do %>
-    <table class="listing form" cellpadding="0" cellspacing="0">
-       <tr>
- 	  <th class="full" colspan="2"><%=_("Settings")%></th>
-       </tr>
-       <tr>
-	  <td class="first" width="120"><strong><%=_("First Language")%></strong></td>
-  	  <td class="last"><%= select_tag :first_language, options_for_select(@valid, @language.first_language), :disabled=>!@permissions[:write] %></td>
-       </tr>
-       <% first = true %>
-       <% @second_languages.each do |name,checked| %>
-          <tr class="bg">
-             <% if first==true %>
-                <% first=false %>
-                <td class="first"><strong><%=_("Second Languages")%></strong></td>
-             <% else %>
-                <td class="first"><strong> </strong></td>
-             <% end %>
-             <td class="last"><input type="checkbox" name=<%=h name%> value="LanguageSet" <%= checked %> <%= "disabled=\"disabled\"" if ! @permissions[:write] %>><%=h name%></td>
-          </tr>
-       <% end %>
-    </table>
-    <p><%= submit_tag _("Save"), :confirm => _('This operation can take a while.'), :disabled=>!@permissions[:write] -%></p>
-<% end %>
+<% form_tag '/language/commit_language' do -%>
+<table>
+  <tr><td colspan="2" class="full" align="center"><strong> <%=_("Settings")%></strong></td></tr>
+  <tr>
+    <td class="first"><%=_("First Language")%></td>
+    <td<%= select_tag :first_language, options_for_select(@valid, @current), :disabled=>!@permissions[:write] %> </td>
+  </tr>
+  <tr>
+    <td class="utf8"> <%=_("Use UTF8 encoding")%> </td>
+    <td> <%= check_box_tag :utf8, "true", @utf8=="true", :disabled=>!@permissions[:write] %> </td>
+  </tr>
+  <tr>
+    <td class="rootlocale"><%=_("Set root locale")%></td>
+    <td> <%= select_tag :rootlocale, options_for_select(["yes","no","ctype"], @rootlocale), :disabled=>!@permissions[:write] %> </td>
+  </tr>
+</table>
+<div><%= submit_tag _("Save"), :disabled=>!@permissions[:write] %></div>
+<% end -%>
 
 
 
