--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -1,4 +1,4 @@
-<html>
+<%= javascript_include_tag :defaults %> 
 
 <script language="javascript">
  
@@ -32,8 +32,6 @@
 <div id="resultdlg">
 </div>
 <!-- end: dialog box -->
-
-<body>
 
 <h1><%=_("Services")%></h1>
 <br>
@@ -122,5 +120,3 @@
       </table>
    </div>
 <% end %>
-<body>
-</html>
