--- a/plugins/language/app/views/language/index.rhtml
+++ b/plugins/language/app/views/language/index.rhtml
@@ -4,44 +4,31 @@
 <% form_tag '/language/commit_language' do -%>
 <table>
   <tr><td colspan="2" class="full" align="center"><strong> <%=_("Settings")%></strong></td></tr>
-
-  <% any_option = false
-    if (!@valid.empty? && @current && @current != "")
-        any_option=true
-
-  %>
   <tr>
     <td class="first"><%=_("First Language")%></td>
-    <td<%= select_tag :first_language, options_for_select(@valid, @current), :disabled=>!@permissions[:write] %> </td>
+    <td>
+      <%= select_tag :first_language, options_for_select(@valid, @current),
+            :disabled=>!@permissions[:write] %>
+    </td>
   </tr>
-  <% end %>
-  <%
-     if (@utf8 && @utf8 != "")
-        any_option=true
-  %>
   <tr>
     <td class="utf8"> <%=_("Use UTF8 encoding")%> </td>
-    <td> <%= check_box_tag :utf8, "true", @utf8=="true", :disabled=>!@permissions[:write] %> </td>
+    <td>
+      <%= check_box_tag :utf8, "true", @utf8=="true",
+        :disabled=>!@permissions[:write] %>
+    </td>
   </tr>
-  <% end
-     if (@rootlocale && @rootlocale != "")
-        any_option=true
-  %>
   <tr>
     <td class="rootlocale"><%=_("Set root locale")%></td>
-    <td> <%= select_tag :rootlocale, options_for_select(["yes","no","ctype"], @rootlocale), :disabled=>!@permissions[:write] %> </td>
+    <td>
+      <%= select_tag :rootlocale, options_for_select(["yes","no","ctype"],
+        @rootlocale), :disabled=>!@permissions[:write] %>
+    </td>
   </tr>
-  <% end
-     unless any_option
-  %>
-  <tr>
-    <td colspan="2"> <%= _("No permision to any language configuration.") %> </td>
-  </tr>
-  <%  end %>
 </table>
-<% if any_option %>
-<div><%= submit_tag _("Save"), :disabled=>!@permissions[:write] %></div>
-<% end %>
+<div>
+  <%= submit_tag _("Save"), :disabled=>!@permissions[:write] %>
+</div>
 <% end -%>
 
 
