--- a/plugins/systemtime/app/views/system_time/index.rhtml
+++ b/plugins/systemtime/app/views/system_time/index.rhtml
@@ -1,35 +1,52 @@
 
 <h2><%=_("Configure time")%></h2>
-
+<%= javascript_include_tag :defaults %>
 <% javascript_tag do -%>
   $(document).ready( function() {
     $(".datepicker").datepicker( { dateFormat: 'dd/mm/yy'} );
   });
 <% end -%>
 
-<%= disabled = ! @permissions[:write] %>
+<% disabled = ! @permissions[:write] %>
 
 <% form_tag '/system_time/commit_time', :class => 'container' do %>
 <span>
+   <label>
+    <span><%=_("Region:")%></span>
+    <%= select_tag "region", options_for_select(@valid, @region.name), :disabled=> disabled %>
+    <%= observe_field(:region,
+                 :frequency => 0.25,
+                 :update => :timezones,
+                 :url => { :action => :timezones_for_region },
+                 :with => "'disabled=' + "+ (disabled ? "true":"false")+" + '&value=' +value") %>
+  </label>
   <label>
     <span><%=_("Timezone:")%></span>
-    <%= select_tag "timezone", options_for_select(@valid, @systemtime.timezone), :disabled=> disabled %>
+
+    <span id="timezones">
+      <%= render(:partial => 'timezones',
+               :locals => {:region => @region, :default => @systemtime.timezone,
+               :disabled => disabled})  %>
+    </span>
   </label>
 
+  <% if @systemtime.utcstatus != "UTConly" %>
   <label>
-    <input type="checkbox" name="utc" value="true" <%= @is_utc %> <%= "disabled=\"disabled\"" if disabled %> />
-    <span><%=_("UTC (Universal Time Coordinated)")%></span>
+    <input type="checkbox" name="utc" value="true" 
+        <%= @systemtime.utcstatus == "UTC" ? "checked" : "" %>
+        <%= "disabled=\"disabled\"" if disabled %> />
+    <span><%=_("Hardware clock is set to UTC (Universal Time Coordinated)")%></span>
   </label>
+  <% end %>
 
   <label>
     <span><%= _("Date") %></span>
-    <!-- <% text_field "date", "", :class => :datepicker, :disabled => @write_permission.eql?('disabled') %>-->
-    <%= text_field "date", "", :class => :datepicker, :disabled=> disabled, :value => @systemtime.date %>
+    <%= text_field "date", "", :class => :datepicker, :disabled=> disabled, :value => @date %>
   </label>
 
   <label>
     <span><%= _("Time") %></span>
-    <%= text_field_tag "currenttime", @systemtime.currenttime, :disabled=> disabled %>
+    <%= text_field_tag "currenttime", @time, :disabled=> disabled %>
   </label>
 
   <span>
