--- a/plugins/systemtime/app/views/system_time/index.rhtml
+++ b/plugins/systemtime/app/views/system_time/index.rhtml
@@ -1,63 +1,67 @@
-
-<h2><%=_("Configure time")%></h2>
-<%= javascript_include_tag :defaults %>
+<%# javascript_include_tag "nogray_time_picker" %>
 <% javascript_tag do -%>
   $(document).ready( function() {
-    $(".datepicker").datepicker( { dateFormat: 'dd/mm/yy'} );
+  $(".datepicker").datepicker( { dateFormat: 'dd/mm/yy'} );
   });
 <% end -%>
+<%= javascript_include_tag :defaults %>
+
 
 <% disabled = ! @permissions[:write] %>
 
-<% form_tag '/system_time/commit_time', :class => 'container' do %>
-<span>
-   <label>
+<h2><%=_("Configure timezone")%></h2>
+<% form_tag '/system_time/commit_timezone', :class => 'container' do %>
+  <label>
     <span><%=_("Region:")%></span>
     <%= select_tag "region", options_for_select(@valid, @region.name), :disabled=> disabled %>
     <%= observe_field(:region,
-                 :frequency => 0.25,
-                 :update => :timezones,
-                 :url => { :action => :timezones_for_region },
-                 :with => "'disabled=' + "+ (disabled ? "true":"false")+" + '&value=' +value") %>
+      :frequency => 0.25,
+      :update => :timezones,
+      :url => { :action => :timezones_for_region },
+      :with => "'disabled=' + "+ (disabled ? "true":"false")+" + '&value=' +value") %>
   </label>
   <label>
     <span><%=_("Timezone:")%></span>
 
     <span id="timezones">
       <%= render(:partial => 'timezones',
-               :locals => {:region => @region, :default => @systemtime.timezone,
-               :disabled => disabled})  %>
+        :locals => {:region => @region, :default => @systemtime.timezone,
+          :disabled => disabled})  %>
     </span>
   </label>
 
   <% if @systemtime.utcstatus != "UTConly" %>
-  <label>
-    <input type="checkbox" name="utc" value="true" 
-        <%= @systemtime.utcstatus == "UTC" ? "checked" : "" %>
-        <%= "disabled=\"disabled\"" if disabled %> />
-    <span><%=_("Hardware clock is set to UTC (Universal Time Coordinated)")%></span>
-  </label>
+    <label>
+      <input type="checkbox" name="utc" value="true"
+      <%= @systemtime.utcstatus == "UTC" ? "checked" : "" %>
+             <%= "disabled=\"disabled\"" if disabled %> />
+      <span><%=_("Hardware clock is set to UTC (Universal Time Coordinated)")%></span>
+    </label>
   <% end %>
-
   <label>
-    <span><%= _("Date") %></span>
-    <%= text_field "date", "", :class => :datepicker, :disabled=> disabled, :value => @date %>
-  </label>
-
-  <label>
-    <span><%= _("Time") %></span>
-    <%= text_field_tag "currenttime", @time, :disabled=> disabled %>
-  </label>
-
-  <span>
-    <hbox>
+    <span>
       <%= submit_tag _("Save"), :onclick=>"Element.show('progress')", :disabled=> disabled, :class => 'button' -%>
-      <a href="/" class="button"><%=_("Back")%></a>
-    </hbox>
-  </span>
-</span>
+    </span>
+  </label>
 <% end %>
+  <h2><%=_("Manually configure time")%></h2>
+  <% form_tag '/system_time/commit_time', :class => 'container' do %>
+    <span>
+      <label>
+        <span><%= _("Date") %></span>
+        <%= text_field "date", "date", :class => :datepicker, :disabled=> disabled, :value => @date %>
+      </label>
 
+      <label>
+        <span><%= _("Time") %></span>
+        <%= text_field_tag "currenttime", @time, :disabled=> disabled %>
+      </label>
 
-
-
+      <span>
+        <hbox>
+          <%= submit_tag _("Save"), :onclick=>"Element.show('progress')", :disabled=> disabled, :class => 'button' -%>
+          <a href="/" class="button"><%=_("Back")%></a>
+        </hbox>
+      </span>
+    </span>
+  <% end %>
